# COS214_DihsignPatterns

./: .gitignore  Activity Diagram Employees Advice Request.vpp  ActivityDiagram.vpp  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Customer.cpp.C80E8BF6E96C6FD7.idx  Customer.h.C144FD2AE747452A.idx  command.cpp.BC37099E99B08162.idx  command.h.6BBC1FECB75E9C81.idx  doctest.h.380ED0F98226E7AF.idx  employee.cpp.4F8F26523157C6E1.idx  employee.h.04F3BFEC0440EF01.idx  frontDesk.cpp.0869000521850B71.idx  frontDesk.h.0C08908DAFE10139.idx  garden.cpp.6AB5346ACDC578DA.idx  garden.h.45400A807C349B4D.idx  inventory.cpp.58D51616E32DD81D.idx  inventory.h.81F01DB345853CDF.idx  inventory_test.cpp.991F48C16390F0C3.idx  iterator.cpp.E12F6F6933D75463.idx  iterator.h.4F1B05359CB71511.idx  order.cpp.AC40A3598657C065.idx  order.h.8C663C19AB5ED758.idx  plant.cpp.F0E34CBF98CCDBA9.idx  plant.h.51FFE15C0D37293A.idx  plantDatabase.cpp.18A5A3E5110930BF.idx  plantDatabase.h.060A875C05EE0AE7.idx  product-builder-test.cpp.1A8D5573B4FD1673.idx  product.cpp.8E4FD8AA24B8C08C.idx  productBuilder.h.605B3708EE5E2EED.idx  simulator.cpp.B909D00CD7254557.idx  simulator.h.D7EF8128C2F7D4CB.idx  testingmain.cpp.50B2F0860EC42510.idx
.github/workflows/: linter.yml
UML_Diagrams/: SequenceDiagram.vpp
UML_Diagrams/Class/: Builder.vpp  ClassDiagrams.vpp  CombinedClassDiagram.vpp  Command.vpp  Composite 2.vpp  Decorater and Composite Prac 5.vpp  Factory + Sequence + Chain.vpp  FinalProj.vpp  FinalProj_v2.vpp  StateUML.vpp  Strategy.vpp
UML_Diagrams/Communication/: Comm.vpp
UML_Diagrams/Object/: Object Diagram.vpp
UML_Diagrams/State/: PlantStateDiagramFinal.vpp
docs/html/: Customer_8cpp.html  Customer_8cpp__incl.map  Customer_8cpp__incl.md5  Customer_8h.html  Customer_8h__dep__incl.map  Customer_8h__dep__incl.md5  Customer_8h__incl.map  Customer_8h__incl.md5  Customer_8h_source.html  annotated.html  classBasicBuilder-members.html  classBasicBuilder.html  classBasicBuilder__coll__graph.map  classBasicBuilder__coll__graph.md5  classBasicBuilder__inherit__graph.map  classBasicBuilder__inherit__graph.md5  classBasicBuilder_a0a89525578f87bdc3e1eb1def930185b_cgraph.map  classBasicBuilder_a0a89525578f87bdc3e1eb1def930185b_cgraph.md5  classBasicBuilder_a9bda4865e819084e4cd225101f289550_cgraph.map  classBasicBuilder_a9bda4865e819084e4cd225101f289550_cgraph.md5  classBasicBuilder_a9bda4865e819084e4cd225101f289550_icgraph.map  classBasicBuilder_a9bda4865e819084e4cd225101f289550_icgraph.md5  classBasicBuilder_aaa141d71977117c9ac00769af99730e7_cgraph.map  classBasicBuilder_aaa141d71977117c9ac00769af99730e7_cgraph.md5  classBasicBuilder_aaa141d71977117c9ac00769af99730e7_icgraph.map  classBasicBuilder_aaa141d71977117c9ac00769af99730e7_icgraph.md5  classBob-members.html  classBob.html  classBob__coll__graph.map  classBob__coll__graph.md5  classBob__inherit__graph.map  classBob__inherit__graph.md5  classBob_a902916fb545a4d9a288a44f791cb41c0_cgraph.map  classBob_a902916fb545a4d9a288a44f791cb41c0_cgraph.md5  classBob_a902916fb545a4d9a288a44f791cb41c0_icgraph.map  classBob_a902916fb545a4d9a288a44f791cb41c0_icgraph.md5  classBouquet-members.html  classBouquet.html  classBouquetBuilder-members.html  classBouquetBuilder.html  (+754 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+63 more)
src/: CMakeLists.txt  makefile
src/cpp/: Customer.cpp  command.cpp  employee.cpp  frontDesk.cpp  garden.cpp  greenhouseManager.cpp  inventory.cpp  iterator.cpp  main.cpp  order.cpp  plant.cpp  plantDatabase.cpp  product.cpp  simulator.cpp  tui.cpp
src/headers/: Customer.h  command.h  decorator.h  employee.h  frontDesk.h  garden.h  greenhouseManager.h  inventory.h  iterator.h  observer.h  order.h  plant.h  plantDatabase.h  productBuilder.h  productRequest.h  simulator.h  tui.h
src/tests/: inventory_test.cpp  product-builder-test.cpp  testingmain.cpp
